--- a/styles.css
+++ b/styles.css
@@ -97,11 +97,10 @@ body {
 }
 
 /* Style the sidenav links and the dropdown button */
-.sidenav a, .dropdown-btn {
+.sidenav a, .dropdown-btn, .disabledmenu{
   padding: 6px 8px 6px 16px;
   font-family: Cambria, Times, serif;
   text-decoration: none;
-  color: #818181;
   display: block;
   border: none;
   background: none;
@@ -109,6 +108,14 @@ body {
   text-align: left;
   cursor: pointer;
   outline: none;
+}
+
+.sidenav a, .dropdown-btn{
+  color: #888888;
+}
+.disabledmenu{
+  color: #585858;
+  font-size: 14px;
 }
 
 /* Headers are bigger than links */
