--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ body {
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   padding-top: 100px; /* Location of the box */
+  padding-left: 200px; /* Same as the width of the sidenav */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
@@ -57,8 +58,7 @@ body {
 
 /* Autocomplete dropdown */
         .tt-hint,
-        .userlook,
-        .category {
+        .userlook {
             border: 2px solid #CCCCCC;
             border-radius: 8px 8px 8px 8px;
             font-size: 24px;
