--- a/stylesdev.css
+++ b/stylesdev.css
@@ -53,34 +53,7 @@ body {
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
 }
-
-/* Autocomplete dropdown */
-        .tt-hint,
-        .userlook {
-            border: 2px solid #CCCCCC;
-            border-radius: 8px 8px 8px 8px;
-            font-size: 24px;
-            height: 45px;
-            line-height: 30px;
-            outline: medium none;
-            padding: 8px 12px;
-            width: 400px;
-        }
-
-        .tt-dropdown-menu {
-            width: 400px;
-            margin-top: 5px;
-            padding: 8px 12px;
-            background-color: #fff;
-            border: 1px solid #ccc;
-            border: 1px solid rgba(0, 0, 0, 0.2);
-            border-radius: 8px 8px 8px 8px;
-            font-size: 18px;
-            color: #111;
-            background-color: #F1F1F1;
-        }
 
 /* Side Navigation */
 /* Fixed sidenav, full height */
@@ -135,4 +108,8 @@ body {
 .active {
   background-color: green;
   color: white;
+}
+
+.typeahead__query {
+  width: 90%;
 }
