Use italics, bold, underline, nonstrikeout, color (F & B), size to differentiate corpuses, flags, & stuff from .95

--- a/stylesdev.css
+++ b/stylesdev.css
@@ -127,3 +127,7 @@ table, th, td {
 .typeahead__query {
   width: 90%;
 }
+
+.extrabold {
+  font-family: Georgia Pro Black, Cooper Black, Bodoni MT Black, Cambria, Times, serif;}
+}
